# msckf-mono-pybinds

./: .gitignore  CMakeLists.txt  README.md  setup.py
include/: matrix_utils.hpp  msckf.hpp  types.hpp
src/: bindings.cpp
